# ibm-q-labs

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
ibm_q_lab_server_extension/: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ibm_q_lab_server_extension/@quantum-labserver/: install.json
ibm_q_lab_server_extension/@quantum-labserver/static/: 688.09e8a1383c921569f1e2.js
ibm_q_lab_server_extension/ibm_q_lab_server_extension/: __init__.py  config.py  handlers.py  notebooks.py
ibm_q_lab_server_extension/ibm_q_lab_server_extension/labextension/: package.json
ibm_q_lab_ui_extensions/: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ibm_q_lab_ui_extensions/@quantum-labui/: install.json  package.json
ibm_q_lab_ui_extensions/@quantum-labui/static/: 227.2f9e8895d4e10b2d74ae.js  283.94facee3beb8b5efffa5.js  461.3d67eb68e43d2eb823c3.js  47.a483e34ebfe4ef830fb9.js  530.c5f60b30428639a77b72.js  62.css  (+10 more)
ibm_q_lab_ui_extensions/ibm_q_lab_ui_extensions/: __init__.py  _version.py
ibm_q_lab_ui_extensions/jconfig/: overrides.json
ibm_quantum_widgets/: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ibm_quantum_widgets/@quantum-labwidgets/: install.json  package.json
ibm_quantum_widgets/@quantum-labwidgets/static/: 210.f35dcc66ff3127969516.js  318.8eadebcbb75521e4619f.js  318.css  320.c04981280d7473e1b3ee.js  612.82d697c4d15692fd4ef2.js  612.css  remoteEntry.53df12d34789a1beee73.js
ibm_quantum_widgets/ibm_quantum_widgets/: __init__.py  _frontend.py  circuit_composer.py  draw_circuit.py  edit_circuit.py  serializers.py  utils.py
ibm_quantum_widgets/ibm_quantum_widgets/labextension/: package.json
ibm_quantum_widgets/ibm_quantum_widgets/labextension/static/: 292.6dea1af252e10ab37479.js  477.a4ad13518a65ba0b4c7f.js  third-party-licenses.json
ibm_quantum_widgets/jconfig/: jupyter_nbconvert_config.json
ibm_quantum_widgets/jconfig/jupyter_server_config.d/: ibm_q_lab_server_extension.json  nbclassic.json
ibm_quantum_widgets/jconfig/labconfig/: page_config.json
ibm_quantum_widgets/jconfig/nbconfig/: notebook.json
ibmq_jupyter_server_health_ext/: README.md  requirements.txt  setup.cfg  setup.py
ibmq_jupyter_server_health_ext/etc/: jupyter_server_health.json
ibmq_jupyter_server_health_ext/ibmq_jupyter_server_health_ext/: __init__.py  application.py  handlers.py
qiskit-kernel/: README.md  setup.cfg  setup.py
qiskit-kernel/qiskit/: kernel.json
(+19 files in other folders)
