[metadata]
description-file = README.md
name = ibm-quantum-widgets
version = 4.0.28
author = IBM Research
author_email = info@ibm.com
description = IBM Quantum widgets for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.ibm.com/IBM-Q-Software/ibmq-jupyterlab-extensions
project_urls =
    Bug Tracker = https://github.ibm.com/IBM-Q-Software/ibmq-jupyterlab-extensions
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    
[options]
python_requires = >=3.6
install_requires = 
    jupyterlab==3.6.7
    qiskit>=1.0.0
    ipywidgets>=7.0.0
