[metadata]
description-file = README.md
name = ibmq-jupyter-server-health-ext
version = 0.0.1
author = IBM Quantum Team
author_email = 
description = IBM Quantum Jupyter Server Health Extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.ibm.com/IBM-Q-Software/ibmq-jupyter-server-health-ext
project_urls =
    Bug Tracker = https://github.ibm.com/IBM-Q-Software/ibmq-jupyter-server-health-ext
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    
[options]
python_requires = >=3.8
install_requires =
    jupyter-server
