[metadata]
description-file = README.md
name = jupyter-qiskit-kernel
version = 1.0.0
author = IBM
author_email = info@ibm.com
description = Qiskit kernel for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.ibm.com/IBM-Q-Software/qiskit-kernel
project_urls =
    Bug Tracker = https://github.ibm.com/IBM-Q-Software/qiskit-kernel
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.8
install_requires =
    jupyter-server
    qiskit